update eslint config rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -35,29 +35,29 @@
 
     // Правила
     "rules": {
-        "array-bracket-spacing": ["error", "always"],
+        "array-bracket-spacing": ["warn", "always"],
         "array-callback-return": "warn",
         "arrow-parens": [2, "as-needed"],
         "class-methods-use-this": 0,
         "consistent-return": "warn",
-        "func-names": ["error", "never"],
+        "func-names": ["warn", "never"],
         "indent": ["warn", 4, { "ignoredNodes": ["JSXElement"], "SwitchCase": 1 }],
         "jsx-a11y/label-has-associated-control": 0,
         "linebreak-style": "off",
         "max-classes-per-file": ["error", 100],
         "no-console": "off",
         "no-implicit-coercion": "off",
-        "no-mixed-operators": "error",
-        "no-multiple-empty-lines": ["error", { "max": 2, "maxBOF": 1, "maxEOF": 10}],
+        "no-mixed-operators": "warn",
+        "no-multiple-empty-lines": ["warn", { "max": 2, "maxBOF": 1, "maxEOF": 10}],
         "no-plusplus": 0,
         "no-shadow": "off",
         "no-underscore-dangle": 0,
-        "object-curly-spacing": ["error", "always"],
+        "object-curly-spacing": ["warn", "always"],
         "padded-blocks": 0,
         "prefer-promise-reject-errors": "warn",
         "quotes": ["warn", "double", { "allowTemplateLiterals": false }],
         "semi": ["warn", "never"],
-        "space-in-parens": ["error", "never"],
+        "space-in-parens": ["warn", "never"],
         "no-floating-promises": 0,
         "no-unsafe-assignment": 0,
         "no-unsafe-member-access": 0,
